<resources>
    <string name="app_name">Pandit_Temples</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">LOG IN</string>
    <string name="pandit">Pandit </string>
    <string name="subtitle">Booking Of Pandit For Pooja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="document">Document</string>
    <string name="logout">Logout</string>
    <string name="add_data">New Data</string>
    <string name="view_data">View Data</string>
    <string name="temple">Temple Activity</string>
    <string name="mythological">Mythological</string>
    <string name="temple_detail">Temple Detail</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minimum_password">6</string>
    <string name="auth_failed">Authentication failed</string>
</resources>