<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.indtrack.pandit_temples.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_add"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.indtrack.pandit_temples.ui.pandit.PanditFragment"
        android:label="@string/pandit"
        tools:layout="@layout/fragment_pandit" >
        <action
            android:id="@+id/action_navigation_add_to_navigation_view"
            app:destination="@id/navigation_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.indtrack.pandit_temples.ui.temple.TempleFragment"
        android:label="@string/temple"
        tools:layout="@layout/fragment_temple" >
        <action
            android:id="@+id/action_navigation_view_to_navigation_mythological"
            app:destination="@id/navigation_mythological" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mythological"
        android:name="com.indtrack.pandit_temples.ui.mythological.MythologicalFragment"
        android:label="@string/mythological"
        tools:layout="@layout/fragment_mythological" >
        <action
            android:id="@+id/action_navigation_mythological_to_navigation_templeDetail"
            app:destination="@id/navigation_templeDetail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_templeDetail"
        android:name="com.indtrack.pandit_temples.ui.temple_detail.TempleDetailFragment"
        android:label="@string/temple_detail"
        tools:layout="@layout/fragment_temple_detail" >
        <action
            android:id="@+id/action_navigation_templeDetail_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>